# Learning-Vulkan

./: CMakeLists.txt  setup.sh  shader-compiler.sh
cinematics/: grassCin.txt  lightCin.txt  scaleCin.txt  testCin.txt
includes/: buffer.hpp  buildingGenerator.hpp  buildings.hpp  camera.hpp  capture.hpp  cinematic.hpp  culling.hpp  curve.hpp  data.hpp  descriptor.hpp  device.hpp  graphics.hpp  grass.hpp  images.hpp  input.hpp  leaves.hpp  manager.hpp  mesh.hpp  object.hpp  pipeline.hpp  random.hpp  rendering.hpp  settlement.hpp  shader.hpp  shadow.hpp  shape.hpp  simulation.hpp  sky.hpp  terrain.hpp  texture.hpp  textures.hpp  time.hpp  trees.hpp  ui.hpp  utilities.hpp  vertex.hpp  water.hpp  wind.hpp  window.hpp
shaders/: aerialCompute.comp  aerialCompute.comp.spv  atmosphere.glsl  building.frag  building.frag.spv  building.vert  building.vert.spv  buildingShadow.vert  buildingShadow.vert.spv  clumpingCompute.comp  clumpingCompute.comp.spv  culling.glsl  curve.glsl  dataCompute.comp  dataCompute.comp.spv  depth.glsl  functions.glsl  grass.frag  grass.frag.spv  grass.vert  grass.vert.spv  grassCompute.comp  grassCompute.comp.spv  grassShadow.vert  grassShadow.vert.spv  heightMapArrayCompute.comp  heightMapArrayCompute.comp.spv  heightMapCompute.comp  heightMapCompute.comp.spv  heightmap.glsl  leaf.frag  leaf.frag.spv  leaf.vert  leaf.vert.spv  leafShadow.frag  leafShadow.frag.spv  leafShadow.vert  leafShadow.vert.spv  lighting.glsl  noise.glsl  (+65 more)
sources/: buffer.cpp  buildingGenerator.cpp  buildings.cpp  camera.cpp  capture.cpp  cinematic.cpp  culling.cpp  curve.cpp  data.cpp  descriptor.cpp  device.cpp  graphics.cpp  grass.cpp  images.cpp  input.cpp  leaves.cpp  main.cpp  manager.cpp  mesh.cpp  object.cpp  pipeline.cpp  random.cpp  settlement.cpp  shader.cpp  shadow.cpp  shape.cpp  simulation.cpp  sky.cpp  terrain.cpp  texture.cpp  textures.cpp  time.cpp  trees.cpp  ui.cpp  utilities.cpp  vertex.cpp  water.cpp  wind.cpp  window.cpp
